# cmake_cheatsheet

./: CMakeLists.txt  LICENSE  README.md  sdl.cmake  sdl_image.cmake  sdl_ttf.cmake
